# Traceai-LLM-EVALUATION-METRICES

./: README.md  main.py  pyproject.toml  test.ipynb
evaluators/: base.py  bleu.py  perplexity.py  rouge.py
metrics/: fluency.py
pipeline/: aggregate.py  evaluate.py
